GPU subdivision: On cage option displaying new subdivided edges like actual edges #97053

Closed
opened 2022-04-05 03:48:47 +02:00 by blendask · 17 comments

System Information
Operating system: Windows-10-10.0.15063-SP0 64 Bits
Graphics card: GeForce GTX 660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-04 15:54, hash: b5f3f8ef1d
Worked: (newest version of Blender that worked as expected)

Short Description
Before or without GPU subdiv when wireframe option is selected: Wireframes doesn't show up when On cage is selected for subdivision modifier
When GPU subdivision is enabled. We see the edges formed by the subdivision modifier. Moreover, these "virtual" modifier edges are visually indistinguishable from "real" edges (these edges even displays when wireframe option is unchecked)

Steps to Reproduce

  • Open default scene
  • delete cube and add UV sphere
  • Enable wireframe from overlays panel
  • subdivision modifier
  • edit mode
  • Optimal Display unchecked
  • Select On cage option (wires disappear for modifier edges)
  • Enable GPU subdivision (now they appear but their color matches with real edges)

Blend-file of demo-scene with reproduced condition
demo-scene.blend

Due to the fact that real edges and modifier edges are visually indistinguishable (in "On Cage" mode), we will get confused when trying to influence edges.
For example, the user wishes to select this edge. But he cannot select it, since this is not exactly an edge, this is a modifier calculations:
image.png
And it also looks ambiguous if Select → All. As if not everything seletced:
image.png

so. How should it look like in my opinion?

before click On Cage and after click On Cage (see screenshot below):
(i created the image in the editor. This is just an illustration)
in the example (second image), we see both: the wireframe, and real edges that can be edit manualy
image.png

But at this moment (v3.2) - we see it like this (please, don't forget full condition list above)
image.png

**System Information** Operating system: Windows-10-10.0.15063-SP0 64 Bits Graphics card: GeForce GTX 660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-04 15:54, hash: `b5f3f8ef1d` Worked: (newest version of Blender that worked as expected) **Short Description** Before or without GPU subdiv when wireframe option is selected: Wireframes doesn't show up when On cage is selected for subdivision modifier When GPU subdivision is enabled. We see the edges formed by the subdivision modifier. Moreover, these "virtual" modifier edges are visually indistinguishable from "real" edges (these edges even displays when wireframe option is unchecked) **Steps to Reproduce** - Open default scene - delete cube and add UV sphere - Enable wireframe from overlays panel - subdivision modifier - edit mode - `Optimal Display` unchecked - Select On cage option (wires disappear for modifier edges) - Enable GPU subdivision (now they appear but their color matches with real edges) Blend-file of demo-scene with reproduced condition [demo-scene.blend](https://archive.blender.org/developer/F12977041/demo-scene.blend) Due to the fact that real edges and modifier edges are visually indistinguishable (in "On Cage" mode), we will get confused when trying to influence edges. For example, the user wishes to select this edge. But he cannot select it, since this is not exactly an edge, this is a modifier calculations: ![image.png](https://archive.blender.org/developer/F12925485/image.png) And it also looks ambiguous if `Select → All`. As if not everything seletced: ![image.png](https://archive.blender.org/developer/F12925490/image.png) so. **How should it look like in my opinion?** before click `On Cage` and after click `On Cage` (see screenshot below): (i created the image in the editor. This is just an illustration) in the example (second image), we see both: the wireframe, and real edges that can be edit manualy ![image.png](https://archive.blender.org/developer/F12925550/image.png) But at this moment (v3.2) - we see it like this (please, don't forget full condition list above) ![image.png](https://archive.blender.org/developer/F12972086/image.png)
Author

Added subscriber: @blendask

Added subscriber: @blendask
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

In all versions I tested, I couldn't show edges when On Cage is enabled in the Maya theme. I followed the conditions above, should I have done something different?

20220405-073055.png

In all versions I tested, I couldn't show edges when On Cage is enabled in the Maya theme. I followed the conditions above, should I have done something different? ![20220405-073055.png](https://archive.blender.org/developer/F12973193/20220405-073055.png)
Author

@OmarEmaraDev

if Blender v3.1 migrate settins from v3.0 - then this issue occurs (returns).

  • in OS Windows — Blender's settings can be reversible withdraw by move the folder %appdata%\Blender Foundation\

after migrate settings - demo-scene looks like left
after reset settings - demo-scene looks like right
image.png

Unfortunately, this is an additional concomitant issue and an obstacle to understanding of the "main subject" in my report. Perhaps this should be taken out in a separate report.

  • my Blender's settings of v3.0 for reproduce this additional issue:
    3.0.7z
  • Blend-file of demo-scene with reproduced condition
    demo-scene.blend
@OmarEmaraDev if Blender v3.1 migrate settins from v3.0 - then [this issue ](https://developer.blender.org/T95899) occurs (returns). - *in OS Windows — Blender's settings can be reversible withdraw by move the folder `%appdata%\Blender Foundation\`* after migrate settings - demo-scene looks like left after reset settings - demo-scene looks like right ![image.png](https://archive.blender.org/developer/F12977036/image.png) Unfortunately, this is an additional concomitant issue and an obstacle to understanding of the "main subject" in my report. Perhaps this should be taken out in a separate report. - my Blender's settings of v3.0 for reproduce this additional issue: [3.0.7z](https://archive.blender.org/developer/F12977062/3.0.7z) - Blend-file of demo-scene with reproduced condition [demo-scene.blend](https://archive.blender.org/developer/F12977008/demo-scene.blend)
Member

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'
Member

I can't get that to work in any version I tested, so I will leave this to someone else.

I can't get that to work in any version I tested, so I will leave this to someone else.
Member

I couldn't show edges when On Cage is enabled in the Maya theme. I followed the conditions above, should I have done something different?

@OmarEmaraDev , I'm guessing GPU subdivision is not enabled at your end.
I do see additional wires

GPU subdiv on GPU subdiv OFF
image.png image.png
> I couldn't show edges when On Cage is enabled in the Maya theme. I followed the conditions above, should I have done something different? @OmarEmaraDev , I'm guessing `GPU subdivision` is not enabled at your end. I do see additional wires | GPU subdiv on | GPU subdiv OFF | | -- | -- | | ![image.png](https://archive.blender.org/developer/F12977532/image.png) | ![image.png](https://archive.blender.org/developer/F12977535/image.png) |
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I agree identifying actual edge becomes difficult. Confirming with small edits

I agree identifying actual edge becomes difficult. Confirming with small edits
Member

@PratikPB2123 Ah yes, indeed.

@PratikPB2123 Ah yes, indeed.
Pratik Borhade changed title from on cage and wireframe to GPU subdivision: On cage option displaying new subdivided edges like actual edges 2022-04-06 11:23:11 +02:00
Member

Added subscribers: @kevindietrich, @lichtwerk

Added subscribers: @kevindietrich, @lichtwerk
Member

Talked to @kevindietrich , setting to High prio (since it is a bug in a new feature according to the playbook

Talked to @kevindietrich , setting to High prio (since it is a bug in a new feature according to the [playbook ](https://wiki.blender.org/wiki/Process/Bug_Reports/Triaging_Playbook)

This issue was referenced by 3f305b9ab3

This issue was referenced by 3f305b9ab3cb66374e6bdf4662ff1bfe90b3c225

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2022-04-14 03:05:32 +02:00
Author

after get in Edit Mode - Wireframe overlay just disappears 🥲
bandicam 2022-06-12 02-28-14-809.mp4
are my expectations wrong how it should work? 🥲
image.png

after get in Edit Mode - Wireframe overlay just disappears 🥲 [bandicam 2022-06-12 02-28-14-809.mp4](https://archive.blender.org/developer/F13147616/bandicam_2022-06-12_02-28-14-809.mp4) are my expectations wrong how it should work? 🥲 ![image.png](https://archive.blender.org/developer/F13147621/image.png)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97053
No description provided.